--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -24,13 +24,13 @@
           <button
             class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
           >
-            <a href="{{ url_for('login') }}">Login</a>
+            <a href="{{ url_for('dashboard') }}">Dashboard</a>
           </button>
-          <button
+          <!-- <button
             class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
           >
             <a href="{{ url_for('signup') }}">Sign Up</a>
-          </button>
+          </button> -->
         </div>
       </div>
     </header>
