--- a/ui/screens/AbsenteeVoting.html
+++ b/ui/screens/AbsenteeVoting.html
@@ -53,8 +53,15 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <p class="text-sm text-gray-500">Absentee voting rules and procedures can vary significantly between states. Always check with your local election office or Secretary of State's website for the most up-to-date and accurate information specific to your area.</p>
+              <div class="mt-4">
+                <a href="https://www.nass.org/can-i-vote/absentee-early-voting" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  Check Absentee and Early Voting Information
+                  <i class="fas fa-external-link-alt ml-2"></i>
+                </a>
+              </div>
             </div>
           </div>
+          
 
           <div class="mt-8 flex justify-between">
             <a href="{{ url_for('polling_locations') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
