--- a/ui/screens/Dashboard.html
+++ b/ui/screens/Dashboard.html
@@ -22,10 +22,42 @@
           <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Eligibility</h3>
+                <h3 class="text-lg font-medium text-gray-900">Vote Registration</h3>
+                <p class="mt-1 text-sm text-gray-600">Check for registration to vote.</p>
+                <div class="mt-4 space-y-2">
+                  <a href="{{ url_for('register_to_vote') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                    Register to Vote
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">Valid forms of ID</h3>
                 <p class="mt-1 text-sm text-gray-600">Check if you're eligible to vote in your state.</p>
                 <a href="{{ url_for('eligibility') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Learn More
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">Elections Official Directory</h3>
+                <p class="mt-1 text-sm text-gray-600">Local Election Office Contact Information from U.S. Vote Foundation</p>
+                <a href="{{ url_for('elections_directory') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                  Learn More
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">Vote registration status</h3>
+                <p class="mt-1 text-sm text-gray-600">Check to know registration status.</p>
+                <a href="{{ url_for('vote_reg_status') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                  View Status
                 </a>
               </div>
             </div>
@@ -52,20 +84,21 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Absentee Voting</h3>
+                <h3 class="text-lg font-medium text-gray-900">Become a Poll Worker</h3>
+                <p class="mt-1 text-sm text-gray-600">Poll workers are hired at the local level.</p>
+                <a href="{{ url_for('become_poll_worker') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                  Join Now!
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">Absentee & Early Voting</h3>
                 <p class="mt-1 text-sm text-gray-600">Learn about voting by mail or early voting options.</p>
                 <a href=" {{ url_for('absentee_voting') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Explore Options
                 </a>
-              </div>
-            </div>
-          </div>
-
-          <div class="mt-8">
-            <h2 class="text-lg font-medium text-gray-900">Your Registration Progress</h2>
-            <div class="mt-4 relative pt-1">
-              <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-indigo-200">
-                <div id="progressBar" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-indigo-500" style="width: 0%"></div>
               </div>
             </div>
           </div>
@@ -79,20 +112,5 @@
       defer
     ></script>
     <script src="{{ url_for('ui', path='/scripts/tailwind.config.js') }}"></script>
-    <script>
-      // Simulating progress for demonstration purposes
-      let progress = 0;
-      const progressBar = document.getElementById('progressBar');
-      
-      function updateProgress() {
-        if (progress < 100) {
-          progress += 25;
-          progressBar.style.width = progress + '%';
-          setTimeout(updateProgress, 1000);
-        }
-      }
-      
-      updateProgress();
-    </script>
   </body>
 </html>
