--- a/ui/screens/Deadlines.html
+++ b/ui/screens/Deadlines.html
@@ -53,6 +53,12 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <p class="text-sm text-gray-500">Registration deadlines can vary significantly by state. It's crucial to check with your local election office or Secretary of State's website for the most accurate and up-to-date information specific to your area.</p>
+              <div class="mt-4">
+                <a href="https://www.usvotefoundation.org/state-election-dates-and-deadlines" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  Check State Election Dates and Deadlines
+                  <i class="fas fa-external-link-alt ml-2"></i>
+                </a>
+              </div>
             </div>
           </div>
 
