--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -49,7 +49,7 @@
             <button
               class="bg-sky-400 hover:bg-white text-black font-bold py-2 px-4 border border-blue-700 rounded"
             >
-              Get Started
+            <a href="{{ url_for('dashboard') }}">Get Started</a>
             </button>
           </div>
           <div class="md:w-1/2">
