--- a/ui/screens/PollingLocations.html
+++ b/ui/screens/PollingLocations.html
@@ -53,8 +53,15 @@
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
               <p class="text-sm text-gray-500">Polling locations can change, so it's important to verify your assigned location before each election. Some areas may also offer early voting or vote centers where any registered voter in the jurisdiction can cast a ballot.</p>
+              <div class="mt-4">
+                <a href="https://www.nass.org/can-i-vote/find-your-polling-place" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                  Find Your Polling Place
+                  <i class="fas fa-external-link-alt ml-2"></i>
+                </a>
+              </div>
             </div>
           </div>
+          
 
           <div class="mt-8 flex justify-between">
             <a href="{{ url_for('deadlines') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
