--- a/ui/screens/PollingLocations.html
+++ b/ui/screens/PollingLocations.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="{{ url_for('ui', path='/assets/favicon.ico') }}" />
   </head>
   <body class="min-h-screen bg-gray-100">
     <header class="bg-white shadow">
@@ -76,5 +76,6 @@
         </div>
       </div>
     </main>
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
