remodify endpoints and add Quick Eligibility Checker

--- a/ui/screens/SignUp.html
+++ b/ui/screens/SignUp.html
@@ -118,7 +118,7 @@
             </button>
             <a
               class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
-              href="{{url_for('login')}}"
+              href="/login"
               >Already have an account? Log in</a
             >
           </div>
