--- a/ui/screens/Dashboard.html
+++ b/ui/screens/Dashboard.html
@@ -25,7 +25,7 @@
                 <h3 class="text-lg font-medium text-gray-900">Vote Registration</h3>
                 <p class="mt-1 text-sm text-gray-600">Check for registration to vote.</p>
                 <div class="mt-4 space-y-2">
-                  <a href="{{ url_for('register_to_vote') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                  <a href="/register_to_vote" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                     Register to Vote
                   </a>
                 </div>
@@ -34,9 +34,9 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Valid forms of ID</h3>
+                <h3 class="text-lg font-medium text-gray-900">Eligibility to Vote</h3>
                 <p class="mt-1 text-sm text-gray-600">Check if you're eligible to vote in your state.</p>
-                <a href="{{ url_for('eligibility') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/eligibility" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Learn More
                 </a>
               </div>
@@ -46,7 +46,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Elections Official Directory</h3>
                 <p class="mt-1 text-sm text-gray-600">Local Election Office Contact Information from U.S. Vote Foundation</p>
-                <a href="{{ url_for('elections_directory') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/elections_directory" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Learn More
                 </a>
               </div>
@@ -56,7 +56,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Vote registration status</h3>
                 <p class="mt-1 text-sm text-gray-600">Check to know registration status.</p>
-                <a href="{{ url_for('vote_reg_status') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/vote_reg_status" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   View Status
                 </a>
               </div>
@@ -66,7 +66,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Registration Deadlines</h3>
                 <p class="mt-1 text-sm text-gray-600">Find out when you need to register by.</p>
-                <a href="{{ url_for('deadlines') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/deadlines" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   View Deadlines
                 </a>
               </div>
@@ -76,7 +76,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Polling Locations</h3>
                 <p class="mt-1 text-sm text-gray-600">Discover where you can vote on Election Day.</p>
-                <a href="{{ url_for('polling_locations') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/polling_locations" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Find Locations
                 </a>
               </div>
@@ -86,7 +86,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Become a Poll Worker</h3>
                 <p class="mt-1 text-sm text-gray-600">Poll workers are hired at the local level.</p>
-                <a href="{{ url_for('become_poll_worker') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/become_a_poll_worker" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Join Now!
                 </a>
               </div>
@@ -96,7 +96,7 @@
               <div class="px-4 py-5 sm:p-6">
                 <h3 class="text-lg font-medium text-gray-900">Absentee & Early Voting</h3>
                 <p class="mt-1 text-sm text-gray-600">Learn about voting by mail or early voting options.</p>
-                <a href=" {{ url_for('absentee_voting') }}" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <a href="/absentee_voting" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                   Explore Options
                 </a>
               </div>
