--- a/ui/screens/Eligibility.html
+++ b/ui/screens/Eligibility.html
@@ -13,7 +13,7 @@
   <body class="min-h-screen bg-gray-100">
     <header class="bg-white shadow">
       <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold text-gray-900">Valid Forms of ID</h1>
+        <h1 class="text-3xl font-bold text-gray-900">Eligibility Checker</h1>
       </div>
     </header>
     <main>
@@ -55,22 +55,26 @@
               <h3 class="text-lg leading-6 font-medium text-gray-900">Additional Information</h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500">Some states may accept additional forms of ID or have specific requirements. Check with your local election office for the most up-to-date information on acceptable forms of ID in your area.</p>
-              <div class="mt-4">
+              <p class="text-sm text-gray-500 mb-4">Some states may accept additional forms of ID or have specific requirements. Check with your local election office for the most up-to-date information on acceptable forms of ID in your area.</p>
+              <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                 <a href="https://www.nass.org/can-i-vote/valid-forms-id" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                   Check State-Specific ID Requirements
                   <i class="fas fa-external-link-alt ml-2"></i>
+                </a>
+                <a href="/eligibility_check" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                  Quick Eligibility Check
+                  <i class="fas fa-check-circle ml-2"></i>
                 </a>
               </div>
             </div>
           </div>
 
           <div class="mt-8 flex justify-between">
-            <a href="{{ url_for('dashboard') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a href="/dashboard" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
               <i class="fas fa-arrow-left mr-2"></i>
               Back to Dashboard
             </a>
-            <a href="{{ url_for('elections_directory') }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a href="/elections_directory" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
               Next: Elections Directory
               <i class="fas fa-arrow-right ml-2"></i>
             </a>
