--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -24,13 +24,8 @@
           <button
             class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
           >
-            <a href="{{ url_for('dashboard') }}">Dashboard</a>
+            <a href="/dashboard">Dashboard</a>
           </button>
-          <!-- <button
-            class="bg-green-300 text-black px-4 py-2 rounded-lg hover:bg-white transition duration-300 shadow-md"
-          >
-            <a href="{{ url_for('signup') }}">Sign Up</a>
-          </button> -->
         </div>
       </div>
     </header>
@@ -49,7 +44,7 @@
             <button
               class="bg-sky-400 hover:bg-white text-black font-bold py-2 px-4 border border-blue-700 rounded"
             >
-            <a href="{{ url_for('dashboard') }}">Get Started</a>
+              <a href="/dashboard">Get Started</a>
             </button>
           </div>
           <div class="md:w-1/2">
@@ -64,74 +59,36 @@
     </main>
 
     <footer class="text-gray-800 p-8 bg-white">
-      <div class="container mx-auto grid grid-cols-1 sm:grid-cols-3 gap-8">
+      <div class="container mx-auto flex flex-col sm:flex-row justify-between">
         <div>
-          <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+          <h3 class="text-xl font-bold mb-4">Contact</h3>
           <ul class="space-y-2">
             <li>
               <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Home</a
+                >Email Us</a
               >
             </li>
             <li>
               <a href="#" class="hover:text-blue-500 transition duration-300"
-                >About Us</a
-              >
-            </li>
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >FAQ</a
-              >
-            </li>
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Contact</a
+                >Phone Support</a
               >
             </li>
           </ul>
         </div>
-        <div>
-          <h3 class="text-xl font-bold mb-4">Support</h3>
+        <div class="mt-8 sm:mt-0 text-right">
+          <h3 class="text-xl font-bold mb-4">Help Us Improve</h3>
           <ul class="space-y-2">
             <li>
               <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Help Center</a
+                >Provide Feedback</a
               >
             </li>
             <li>
               <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Privacy Policy</a
-              >
-            </li>
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Terms of Service</a
+                >Suggest Features</a
               >
             </li>
           </ul>
-        </div>
-        <div class="col-span-2 sm:col-span-1">
-          <h3 class="text-xl font-bold mb-4">Connect With Us</h3>
-          <div class="flex space-x-4">
-            <a
-              href="#"
-              class="text-2xl hover:text-blue-500 transition duration-300"
-            >
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a
-              href="#"
-              class="text-2xl hover:text-blue-500 transition duration-300"
-            >
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a
-              href="#"
-              class="text-2xl hover:text-blue-500 transition duration-300"
-            >
-              <i class="fab fa-instagram"></i>
-            </a>
-          </div>
         </div>
       </div>
       <div class="mt-8 text-center text-gray-600">
