--- a/ui/screens/Login.html
+++ b/ui/screens/Login.html
@@ -68,7 +68,7 @@
           Don't have an account?
           <a
             class="text-blue-500 hover:text-blue-800 font-bold"
-            href="{{ url_for('signup') }}"
+            href="/signup"
             >Sign Up</a
           >
         </p>
