--- a/ui/screens/AbsenteeVoting.html
+++ b/ui/screens/AbsenteeVoting.html
@@ -22,55 +22,100 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Absentee Voting Information</h2>
-              <p class="mt-1 max-w-2xl text-sm text-gray-500">Learn about voting by mail or early voting options.</p>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">
+                Absentee Voting Information
+              </h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                Learn about voting by mail or early voting options.
+              </p>
             </div>
             <div class="border-t border-gray-200">
               <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Eligibility</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Eligibility for absentee voting varies by state. Some states require a reason, while others offer "no-excuse" absentee voting.</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Eligibility for absentee voting varies by state. Some states
+                    require a reason, while others offer "no-excuse" absentee
+                    voting.
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Request Process</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">You typically need to request an absentee ballot in advance. Check your state's specific requirements and deadlines.</dd>
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Request Process
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    You typically need to request an absentee ballot in advance.
+                    Check your state's specific requirements and deadlines.
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Deadlines</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Pay close attention to deadlines for requesting and returning absentee ballots. These can vary by state and election.</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Pay close attention to deadlines for requesting and
+                    returning absentee ballots. These can vary by state and
+                    election.
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Tracking</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Many states offer online tracking systems to check the status of your absentee ballot.</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Many states offer online tracking systems to check the
+                    status of your absentee ballot.
+                  </dd>
                 </div>
               </dl>
             </div>
           </div>
-          
+
           <div class="mt-8 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h3 class="text-lg leading-6 font-medium text-gray-900">Additional Information</h3>
+              <h3 class="text-lg leading-6 font-medium text-gray-900">
+                Additional Information
+              </h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500">Absentee voting rules and procedures can vary significantly between states. Always check with your local election office or Secretary of State's website for the most up-to-date and accurate information specific to your area.</p>
+              <p class="text-sm text-gray-500">
+                Absentee voting rules and procedures can vary significantly
+                between states. Always check with your local election office or
+                Secretary of State's website for the most up-to-date and
+                accurate information specific to your area.
+              </p>
               <div class="mt-4">
-                <a href="https://www.nass.org/can-i-vote/absentee-early-voting" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <a
+                  href="https://www.nass.org/can-i-vote/absentee-early-voting"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                >
                   Check Absentee and Early Voting Information
                   <i class="fas fa-external-link-alt ml-2"></i>
                 </a>
               </div>
             </div>
           </div>
-          
 
           <div class="mt-8 flex justify-between">
-            <a href="/polling_locations" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/polling_locations"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               <i class="fas fa-arrow-left mr-2"></i>
               Back to Polling Locations
             </a>
-            <a href="/dashboard" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Back to Dashboard
-              <i class="fas fa-home ml-2"></i>
+            <a
+              href="/elections_directory"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
+              Next: Elections Official Directory
+              <i class="fas fa-arrow-right ml-2"></i>
             </a>
           </div>
         </div>
