--- a/ui/screens/Dashboard.html
+++ b/ui/screens/Dashboard.html
@@ -13,7 +13,9 @@
   <body class="min-h-screen bg-gray-100">
     <header class="bg-white shadow">
       <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold text-gray-900">Voter Registration Dashboard</h1>
+        <h1 class="text-3xl font-bold text-gray-900">
+          Voter Registration Dashboard
+        </h1>
       </div>
     </header>
     <main>
@@ -22,10 +24,32 @@
           <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-4">
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Vote Registration</h3>
-                <p class="mt-1 text-sm text-gray-600">Check for registration to vote.</p>
+                <h3 class="text-lg font-medium text-gray-900">
+                  Quick Eligibility Check
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Check if you're eligible to vote in your state.
+                </p>
+                <a
+                  href="/eligibility_check"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
+                  Check Now
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">
+                  Vote Registration
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">Register here to Vote.</p>
                 <div class="mt-4 space-y-2">
-                  <a href="/register_to_vote" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                  <a
+                    href="/register_to_vote"
+                    class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                  >
                     Register to Vote
                   </a>
                 </div>
@@ -34,29 +58,16 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Eligibility to Vote</h3>
-                <p class="mt-1 text-sm text-gray-600">Check if you're eligible to vote in your state.</p>
-                <a href="/eligibility" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                  Learn More
-                </a>
-              </div>
-            </div>
-
-            <div class="bg-white overflow-hidden shadow rounded-lg">
-              <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Elections Official Directory</h3>
-                <p class="mt-1 text-sm text-gray-600">Local Election Office Contact Information from U.S. Vote Foundation</p>
-                <a href="/elections_directory" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                  Learn More
-                </a>
-              </div>
-            </div>
-
-            <div class="bg-white overflow-hidden shadow rounded-lg">
-              <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Vote registration status</h3>
-                <p class="mt-1 text-sm text-gray-600">Check to know registration status.</p>
-                <a href="/vote_reg_status" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <h3 class="text-lg font-medium text-gray-900">
+                  Vote registration status
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Check to know registration status.
+                </p>
+                <a
+                  href="/vote_reg_status"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
                   View Status
                 </a>
               </div>
@@ -64,9 +75,16 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Registration Deadlines</h3>
-                <p class="mt-1 text-sm text-gray-600">Find out when you need to register by.</p>
-                <a href="/deadlines" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <h3 class="text-lg font-medium text-gray-900">
+                  Registration Deadlines
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Find out when you need to register by.
+                </p>
+                <a
+                  href="/deadlines"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
                   View Deadlines
                 </a>
               </div>
@@ -74,9 +92,16 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Polling Locations</h3>
-                <p class="mt-1 text-sm text-gray-600">Discover where you can vote on Election Day.</p>
-                <a href="/polling_locations" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                <h3 class="text-lg font-medium text-gray-900">
+                  Polling Locations
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Discover where you can vote on Election Day.
+                </p>
+                <a
+                  href="/polling_locations"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
                   Find Locations
                 </a>
               </div>
@@ -84,20 +109,52 @@
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Become a Poll Worker</h3>
-                <p class="mt-1 text-sm text-gray-600">Poll workers are hired at the local level.</p>
-                <a href="/become_poll_worker" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                  Join Now!
+                <h3 class="text-lg font-medium text-gray-900">
+                  Absentee & Early Voting
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Learn about voting by mail or early voting options.
+                </p>
+                <a
+                  href="/absentee_voting"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
+                  Explore Options
                 </a>
               </div>
             </div>
 
             <div class="bg-white overflow-hidden shadow rounded-lg">
               <div class="px-4 py-5 sm:p-6">
-                <h3 class="text-lg font-medium text-gray-900">Absentee & Early Voting</h3>
-                <p class="mt-1 text-sm text-gray-600">Learn about voting by mail or early voting options.</p>
-                <a href="/absentee_voting" class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                  Explore Options
+                <h3 class="text-lg font-medium text-gray-900">
+                  Elections Official Directory
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Local Election Office Contact Information from U.S. Vote
+                  Foundation
+                </p>
+                <a
+                  href="/elections_directory"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
+                  Learn More
+                </a>
+              </div>
+            </div>
+
+            <div class="bg-white overflow-hidden shadow rounded-lg">
+              <div class="px-4 py-5 sm:p-6">
+                <h3 class="text-lg font-medium text-gray-900">
+                  Become a Poll Worker
+                </h3>
+                <p class="mt-1 text-sm text-gray-600">
+                  Poll workers are hired at the local level.
+                </p>
+                <a
+                  href="/become_poll_worker"
+                  class="mt-3 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                >
+                  Join Now!
                 </a>
               </div>
             </div>
