--- a/ui/screens/ElectionDirectory.html
+++ b/ui/screens/ElectionDirectory.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Election Directory</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="icon" href="{{ url_for('ui', path='/assets/favicon.ico') }}" />
   </head>
   <body class="min-h-screen bg-gray-100">
@@ -18,34 +21,62 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Find Your Election Office</h2>
-              <p class="mt-1 max-w-2xl text-sm text-gray-500">Use this directory to find your local election office and get official information about voting procedures in your area:</p>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">
+                Find Your Election Office
+              </h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                Use this directory to find your local election office and get
+                official information about voting procedures in your area:
+              </p>
             </div>
             <div class="border-t border-gray-200">
               <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 1</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Select your state from the list</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Select your state from the list
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 2</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Find the contact information for your local election office</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Find the contact information for your local election office
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 3</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Reach out to your election office for any specific inquiries</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Reach out to your election office for any specific inquiries
+                  </dd>
                 </div>
               </dl>
             </div>
           </div>
-          
+
           <div class="mt-8 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h3 class="text-lg leading-6 font-medium text-gray-900">Official Election Directory</h3>
+              <h3 class="text-lg leading-6 font-medium text-gray-900">
+                Official Election Directory
+              </h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500">For the official directory of election offices and to find specific information, please visit the US Vote Foundation's election office directory:</p>
-              <a href="https://www.usvotefoundation.org/election-offices" target="_blank" rel="noopener noreferrer" class="mt-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              <p class="text-sm text-gray-500">
+                For the official directory of election offices and to find
+                specific information, please visit the US Vote Foundation's
+                election office directory:
+              </p>
+              <a
+                href="https://www.usvotefoundation.org/election-offices"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="mt-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              >
                 Visit Election Directory
                 <i class="fas fa-external-link-alt ml-2"></i>
               </a>
@@ -53,12 +84,18 @@
           </div>
 
           <div class="mt-8 flex justify-between">
-            <a href="/dashboard" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/absentee_voting"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               <i class="fas fa-arrow-left mr-2"></i>
-              Back to Dashboard
+              Back to Absentee Voting
             </a>
-            <a href="/vote_reg_status" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Next: Check Voter Status
+            <a
+              href="/become_poll_worker"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
+              Next: Become a Poll Worker
               <i class="fas fa-arrow-right ml-2"></i>
             </a>
           </div>
@@ -67,6 +104,9 @@
     </main>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js"
+      defer
+    ></script>
   </body>
 </html>
