--- a/ui/screens/RegisterToVote.html
+++ b/ui/screens/RegisterToVote.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register to Vote</title>
     <link rel="icon" href="{{ url_for('ui', path='/assets/favicon.ico') }}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body class="min-h-screen bg-gray-100">
     <header class="bg-white shadow">
@@ -18,38 +21,68 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Registration Steps</h2>
-              <p class="mt-1 max-w-2xl text-sm text-gray-500">Follow these steps to register to vote:</p>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">
+                Registration Steps
+              </h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                Follow these steps to register to vote:
+              </p>
             </div>
             <div class="border-t border-gray-200">
               <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 1</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Check if you're eligible to vote in your state</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Check if you're eligible to vote in your state
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 2</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Gather necessary identification documents</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Gather necessary identification documents
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 3</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Complete the voter registration form</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Complete the voter registration form
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Step 4</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Submit your registration before your state's deadline</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Submit your registration before your state's deadline
+                  </dd>
                 </div>
               </dl>
             </div>
           </div>
-          
+
           <div class="mt-8 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h3 class="text-lg leading-6 font-medium text-gray-900">Official Registration</h3>
+              <h3 class="text-lg leading-6 font-medium text-gray-900">
+                Official Registration
+              </h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500">For official information and to start the registration process, please visit the NASS.org voter registration page:</p>
-              <a href="https://www.nass.org/can-i-vote/register-to-vote" target="_blank" rel="noopener noreferrer" class="mt-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              <p class="text-sm text-gray-500">
+                For official information and to start the registration process,
+                please visit the NASS.org voter registration page:
+              </p>
+              <a
+                href="https://www.nass.org/can-i-vote/register-to-vote"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="mt-4 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              >
                 Official Voter Registration
                 <i class="fas fa-external-link-alt ml-2"></i>
               </a>
@@ -57,12 +90,18 @@
           </div>
 
           <div class="mt-8 flex justify-between">
-            <a href="/dashboard" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/eligibility_check"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               <i class="fas fa-arrow-left mr-2"></i>
-              Back to Dashboard
+              Back to Eligibility Checker
             </a>
-            <a href="/eligibility" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Next: Check Eligibility
+            <a
+              href="/vote_reg_status"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
+              Next: Check Registration Status
               <i class="fas fa-arrow-right ml-2"></i>
             </a>
           </div>
@@ -71,6 +110,9 @@
     </main>
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js" defer></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js"
+      defer
+    ></script>
   </body>
 </html>
