add footer to all pages

--- a/ui/screens/Landing.html
+++ b/ui/screens/Landing.html
@@ -58,41 +58,14 @@
       </div>
     </main>
 
-    <footer class="text-gray-800 p-8 bg-white">
-      <div class="container mx-auto flex flex-col sm:flex-row justify-between">
-        <div>
-          <h3 class="text-xl font-bold mb-4">Contact</h3>
-          <ul class="space-y-2">
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Email Us</a
-              >
-            </li>
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Phone Support</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="mt-8 sm:mt-0 text-right">
-          <h3 class="text-xl font-bold mb-4">Help Us Improve</h3>
-          <ul class="space-y-2">
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Provide Feedback</a
-              >
-            </li>
-            <li>
-              <a href="#" class="hover:text-blue-500 transition duration-300"
-                >Suggest Features</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="mt-8 text-center text-gray-600">
-        <p>&copy; 2024 Voter Registration. All rights reserved.</p>
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
       </div>
     </footer>
 
