--- a/ui/screens/AbsenteeVoting.html
+++ b/ui/screens/AbsenteeVoting.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="min-h-screen bg-gray-100">
     <header class="bg-white shadow">
@@ -121,5 +120,18 @@
         </div>
       </div>
     </main>
+
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
+      </div>
+    </footer>
+
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
