--- a/ui/screens/ElectionDirectory.html
+++ b/ui/screens/ElectionDirectory.html
@@ -103,6 +103,17 @@
       </div>
     </main>
 
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
+      </div>
+    </footer>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.3.0/alpine-ie11.min.js"
