--- a/ui/screens/EligibilityCheck.html
+++ b/ui/screens/EligibilityCheck.html
@@ -138,6 +138,17 @@
       </div>
     </main>
 
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
+      </div>
+    </footer>
+
     <script src="{{ url_for('ui', path='/scripts/tailwind.config.js') }}"></script>
     <script src="{{ url_for('ui', path='/scripts/eligibilityHandler.js')}}"></script>
     <script src="{{ url_for('ui', path='/scripts/statesGetter.js')}}"></script>
