--- a/ui/screens/EligibilityDetails.html
+++ b/ui/screens/EligibilityDetails.html
@@ -21,43 +21,90 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Acceptable Identification</h2>
-              <p class="mt-1 max-w-2xl text-sm text-gray-500">The following forms of ID are generally accepted for voter registration. Requirements may vary by state.</p>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">
+                Acceptable Identification
+              </h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                The following forms of ID are generally accepted for voter
+                registration. Requirements may vary by state.
+              </p>
             </div>
             <div class="border-t border-gray-200">
               <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Driver's License</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">A valid, unexpired driver's license from your state</dd>
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Driver's License
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    A valid, unexpired driver's license from your state
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">State ID Card</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">A valid, unexpired state-issued ID card</dd>
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    State ID Card
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    A valid, unexpired state-issued ID card
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">U.S. Passport</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">A valid, unexpired U.S. passport or passport card</dd>
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    U.S. Passport
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    A valid, unexpired U.S. passport or passport card
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
                   <dt class="text-sm font-medium text-gray-500">Military ID</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">A valid U.S. military ID card</dd>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    A valid U.S. military ID card
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Tribal ID Card</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">A tribal identification card issued by a federally recognized tribe</dd>
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Tribal ID Card
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    A tribal identification card issued by a federally
+                    recognized tribe
+                  </dd>
                 </div>
               </dl>
             </div>
           </div>
-          
+
           <div class="mt-8 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h3 class="text-lg leading-6 font-medium text-gray-900">Additional Information</h3>
+              <h3 class="text-lg leading-6 font-medium text-gray-900">
+                Additional Information
+              </h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500 mb-4">Some states may accept additional forms of ID or have specific requirements. Check with your local election office for the most up-to-date information on acceptable forms of ID in your area.</p>
-              <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                <a href="https://www.nass.org/can-i-vote/valid-forms-id" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              <p class="text-sm text-gray-500 mb-4">
+                Some states may accept additional forms of ID or have specific
+                requirements. Check with your local election office for the most
+                up-to-date information on acceptable forms of ID in your area.
+              </p>
+              <div
+                class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4"
+              >
+                <a
+                  href="https://www.nass.org/can-i-vote/valid-forms-id"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                >
                   Check State-Specific ID Requirements
                   <i class="fas fa-external-link-alt ml-2"></i>
                 </a>
@@ -66,11 +113,17 @@
           </div>
 
           <div class="mt-8 flex justify-between">
-            <a href="/eligibility_check" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/eligibility_check"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               <i class="fas fa-arrow-left mr-2"></i>
               Back to Eligibility Checker
             </a>
-            <a href="/register_to_vote" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/register_to_vote"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               Next: Voter Registration
               <i class="fas fa-arrow-right ml-2"></i>
             </a>
@@ -78,6 +131,17 @@
         </div>
       </div>
     </main>
+
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
+      </div>
+    </footer>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script
