--- a/ui/screens/PollingLocations.html
+++ b/ui/screens/PollingLocations.html
@@ -22,53 +22,102 @@
         <div class="px-4 py-6 sm:px-0">
           <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h2 class="text-lg leading-6 font-medium text-gray-900">Finding Your Polling Location</h2>
-              <p class="mt-1 max-w-2xl text-sm text-gray-500">How to locate where you can cast your vote on Election Day.</p>
+              <h2 class="text-lg leading-6 font-medium text-gray-900">
+                Finding Your Polling Location
+              </h2>
+              <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                How to locate where you can cast your vote on Election Day.
+              </p>
             </div>
             <div class="border-t border-gray-200">
               <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Voter Registration Card</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Check your voter registration card, which often lists your assigned polling place.</dd>
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Voter Registration Card
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Check your voter registration card, which often lists your
+                    assigned polling place.
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">State Election Website</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Visit your state's election office website to look up your polling location.</dd>
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    State Election Website
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Visit your state's election office website to look up your
+                    polling location.
+                  </dd>
                 </div>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Get to the Polls</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Use online tools like "Get to the Polls" to find your polling place based on your address.</dd>
+                <div
+                  class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Get to the Polls
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Use online tools like "Get to the Polls" to find your
+                    polling place based on your address.
+                  </dd>
                 </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                  <dt class="text-sm font-medium text-gray-500">Contact Local Officials</dt>
-                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">Call your local election office for information about your polling location.</dd>
+                <div
+                  class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6"
+                >
+                  <dt class="text-sm font-medium text-gray-500">
+                    Contact Local Officials
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                    Call your local election office for information about your
+                    polling location.
+                  </dd>
                 </div>
               </dl>
             </div>
           </div>
-          
+
           <div class="mt-8 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-              <h3 class="text-lg leading-6 font-medium text-gray-900">Additional Information</h3>
+              <h3 class="text-lg leading-6 font-medium text-gray-900">
+                Additional Information
+              </h3>
             </div>
             <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
-              <p class="text-sm text-gray-500">Polling locations can change, so it's important to verify your assigned location before each election. Some areas may also offer early voting or vote centers where any registered voter in the jurisdiction can cast a ballot.</p>
+              <p class="text-sm text-gray-500">
+                Polling locations can change, so it's important to verify your
+                assigned location before each election. Some areas may also
+                offer early voting or vote centers where any registered voter in
+                the jurisdiction can cast a ballot.
+              </p>
               <div class="mt-4">
-                <a href="https://www.nass.org/can-i-vote/find-your-polling-place" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <a
+                  href="https://www.nass.org/can-i-vote/find-your-polling-place"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                >
                   Find Your Polling Place
                   <i class="fas fa-external-link-alt ml-2"></i>
                 </a>
               </div>
             </div>
           </div>
-          
 
           <div class="mt-8 flex justify-between">
-            <a href="/deadlines" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/deadlines"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               <i class="fas fa-arrow-left mr-2"></i>
               Back to Deadlines
             </a>
-            <a href="/absentee_voting" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a
+              href="/absentee_voting"
+              class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
               Next: Absentee Voting
               <i class="fas fa-arrow-right ml-2"></i>
             </a>
@@ -76,6 +125,18 @@
         </div>
       </div>
     </main>
+
+    <footer class="text-gray-800 p-4 bg-white">
+      <div class="container mx-auto text-center">
+        <a
+          href="mailto:notetokavin@gmail.com"
+          class="text-blue-500 hover:text-blue-700 transition duration-300"
+        >
+          Share Your Feedback or Connect With Us
+        </a>
+      </div>
+    </footer>
+
     <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
